--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,7 +23,9 @@
       "imports": [
         "styles/partials/_setup.scss",
         "styles/partials/_utils.scss",
-        "styles/partials/_typography.scss"
+        "styles/partials/_typography.scss",
+        "styles/partials/_general.scss",
+        "styles/partials/_header.scss"
       ]
     }
   ],
