--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,7 +25,8 @@
         "styles/partials/_utils.scss",
         "styles/partials/_typography.scss",
         "styles/partials/_general.scss",
-        "styles/partials/_header.scss"
+        "styles/partials/_header.scss",
+        "styles/partials/_learn-more.scss"
       ]
     }
   ],
