--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,7 @@
         "styles/partials/_typography.scss",
         "styles/partials/_general.scss",
         "styles/partials/_header.scss",
-        "styles/partials/_learn-more.scss"
+        "styles/partials/_tout.scss"
       ]
     }
   ],
