adding gallery and services section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,8 @@
         "styles/partials/_typography.scss",
         "styles/partials/_general.scss",
         "styles/partials/_header.scss",
-        "styles/partials/_tout.scss"
+        "styles/partials/_tout.scss",
+        "styles/partials/_gallery.scss"
       ]
     }
   ],
