--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,7 +27,8 @@
         "styles/partials/_general.scss",
         "styles/partials/_header.scss",
         "styles/partials/_tout.scss",
-        "styles/partials/_gallery.scss"
+        "styles/partials/_gallery.scss",
+        "styles/partials/_forms.scss"
       ]
     }
   ],
