styling for the footer

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,7 +28,8 @@
         "styles/partials/_header.scss",
         "styles/partials/_tout.scss",
         "styles/partials/_gallery.scss",
-        "styles/partials/_forms.scss"
+        "styles/partials/_forms.scss",
+        "styles/partials/_footer.scss"
       ]
     }
   ],
